--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -276,7 +276,7 @@ Please note that this method won't allow you to choose Redis Modules while creat
 
 #### Step 1: Sign up for a Heroku account
 
-Create a heroku account and sign-in to the dashboard
+Create a Heroku account and sign-in to the dashboard.
 
 ![heroku](create_heroku.png)
 
