--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -335,7 +335,7 @@ Click "Open App" on the top right corner.
 ### Next Steps
 
 - [How to build Java based Rate Limiting application on Heroku using Redis](/howtos/herokujava)
-- [How to build NodeJS based Rate Limiting application on Heroku using Redis](/howtos/herokunodejs)
+- [How to build a NodeJS based Rate Limiting application on Heroku using Redis](/howtos/herokunodejs)
 
 ##
 
