--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -282,7 +282,7 @@ Create a Heroku account and sign-in to the dashboard.
 
 #### Step 2. Create a new Heroku app
 
-Create a new app called "redislabs"
+Create a new app called "redislabs":
 
 ![heroku](heroku_appname.png)
 
