--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -311,7 +311,7 @@ Select "Github" as a deployment method
 
 #### Step 7. Deploy the app
 
-Before deploying the app, modify the environmental variables as per your application:
+Before deploying the app, modify the environment variables as per your application:
 
 ![heroku](heroku_env1.png)
 
