--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -289,7 +289,7 @@ Create a new app called "redislabs":
 
 #### Step 3. Choose GitHub
 
-Select "Github" as a deployment method
+Select "GitHub" as a deployment method:
 
 
 ![heroku](heroku_selectgit.png)
