--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -316,7 +316,7 @@ Before deploying the app, modify the environment variables as per your applicati
 ![heroku](heroku_env1.png)
 
 
-Go to "Deploy" section under the application dashboard and click on "Deploy Branch"
+Go to the "Deploy" section of the application dashboard and click on "Deploy Branch":
 
 ![heroku](heroku_finaldeploy.png)
 
