--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -334,7 +334,7 @@ Click "Open App" on the top right corner.
 
 ### Next Steps
 
-- [How to build Java based Rate Limiting application on Heroku using Redis](/howtos/herokujava)
+- [How to build a Java based Rate Limiting application on Heroku using Redis](/howtos/herokujava)
 - [How to build a NodeJS based Rate Limiting application on Heroku using Redis](/howtos/herokunodejs)
 
 ##
