--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-ratelimitinggo
-title: Deploy Redis Rate Limiting app on Heroku
+title: Deploy a Redis Rate Limiting app on Heroku
 sidebar_label: How to deploy a Redis Rate Limiting application on Heroku
 slug: /create/heroku/ratelimiting-go
 authors: [ajeet]
