--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -12,7 +12,7 @@ Rate limiting is a mechanism that many developers may have to deal with at some 
 In this tutorial, we will see how to deploy Rate Limiting using Redis and Go.
 ### Step 1. Create a Redis Enterprise Cloud Database
 
-Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](https://developer.redis.com/create/rediscloud) subscription and database as shown below:
+Create your free Redis Enterprise Cloud account. [Follow this link to create a Redis Enterprise Cloud](https://developer.redis.com/create/rediscloud) subscription and database as shown below:
 
 
 ![alt_text](images/image1.png "image_tooltip")
