--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -74,7 +74,7 @@ For this demonstration, we will be using a Simple Rate Limiting application usin
 
 
 
-### Step 6. Setting up Environmental variable
+### Step 6. Setting up Environment Variables
 
 Go to the Heroku dashboard, click "Settings" and set REDIS_HOST, REDIS_PORT and REDIS_PASSWORD under the Config Vars. Refer to Step 1 for the correct values to use.
 
