--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -50,7 +50,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
 
 ### Step 5. Connect your application to Redis Enterprise Cloud
 
-For this demonstration, we will be using a Simple Rate Limiting application using Go
+For this demonstration, we will be using a Simple Rate Limiting application using Go.
 
 
 #### Clone the repository
