Fixed the links under the reference section

--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -225,6 +225,6 @@ Where `c` corresponds to the active controller and `c.r` is a Redis client.
 
 ### References
 
-- [Deploy a Java app on Heroku using Redis](http://localhost:3000/create/heroku/herokujava)
-- [Deploy a NodeJS app on Heroku using Redis](http://localhost:3000/create/heroku/herokunodejs)
-- [Deploy a Python app on Heroku using Redis](http://localhost:3000/create/heroku/herokupython)
+- [Deploy a Java app on Heroku using Redis](/create/heroku/herokujava)
+- [Deploy a NodeJS app on Heroku using Redis](/create/heroku/herokunodejs)
+- [Deploy a Python app on Heroku using Redis](/create/heroku/herokupython)
