--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redis-om
-title: Getting Started With Redis OM - Python
+title: Getting Started With Redis OM for Python
 sidebar_label: Redis OM - Python
 slug: /develop/python/redis-om
 ---
@@ -10,11 +10,17 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-This tutorial will walk you through installing Redis OM - Python, creating your first model, and using it to save and validate data.
+Redis OM for Python makes it easy to model and query data in Redis using
+declarative models that will feel right at home to users of Peewee, SQLAlchemy,
+and the Django ORM.
+
+This tutorial will walk you through installing Redis OM for Python, creating
+your first model, and using it to save and validate data.
 
 ## Prerequisites
 
-Redis OM requires Python version 3.9 or above and a Redis instance to connect to.
+Redis OM requires Python version 3.9 or above and a Redis instance to connect
+to.
 
 ## Python
 
@@ -25,43 +31,63 @@ python --version
 Python 3.9.0
 ```
 
-If you don't have Python installed, you can download it from [Python.org](https://www.python.org/downloads/), use [Pyenv](https://github.com/pyenv/pyenv), or install Python with your operating system's package manager.
+If you don't have Python installed, you can download it from
+[Python.org](https://www.python.org/downloads/), use
+[Pyenv](https://github.com/pyenv/pyenv), or install Python with your operating
+system's package manager.
 
 ## Redis
 
-Redis OM saves data in Redis, so you will need Redis installed and running to complete this tutorial.
+Redis OM saves data in Redis, so you will need Redis installed and running to
+complete this tutorial.
 
 ### Downloading Redis
 
-The latest version of Redis is available from [Redis.io](https://redis.io/). You can also install Redis with your operating system's package manager.
+The latest version of Redis is available from [Redis.io](https://redis.io/). You
+can also install Redis with your operating system's package manager.
 
-**NOTE:** This tutorial will guide you through starting Redis locally, but the instructions will also work if Redis is running on a remote server.
+**NOTE:** This tutorial will guide you through starting Redis locally, but the
+instructions will also work if Redis is running on a remote server.
 
 ### Installing Redis On Windows
 
-Redis doesn't run directly on Windows, but you can use Windows Subsystem for Linux (WSL) to run Redis. See [our video on YouTube](https://youtu.be/_nFwPTHOMIY) for a walk-through.
+Redis doesn't run directly on Windows, but you can use Windows Subsystem for
+Linux (WSL) to run Redis. See [our video on
+YouTube](https://youtu.be/_nFwPTHOMIY) for a walk-through.
 
-Windows users can also use Docker. See the next section on running Redis with Docker for more information.
+Windows users can also use Docker. See the next section on running Redis with
+Docker for more information.
 
 ### Using Redis With Docker
 
-Instead of installing Redis manually or with a package manager, you can run Redis with Docker.
+Instead of installing Redis manually or with a package manager, you can run
+Redis with Docker.
 
-We recommend the [redismod](https://hub.docker.com/r/redislabs/redismod) image because it includes Redis modules that Redis OM can use to give you extra features. Later sections of this guide will provide more detail about these features.
+We recommend the [redismod](https://hub.docker.com/r/redislabs/redismod) image
+because it includes Redis modules that Redis OM can use to give you extra
+features. Later sections of this guide will provide more detail about these
+features.
 
-You can also use the official Redis Docker image, which is hosted on [Docker Hub](https://hub.docker.com/_/redis).
+You can also use the official Redis Docker image, which is hosted on [Docker
+Hub](https://hub.docker.com/_/redis).
 
-**NOTE**: We'll talk about how to actually start Redis with Docker when we discuss _running_ Redis later in this guide.
+**NOTE**: We'll talk about how to actually start Redis with Docker when we
+discuss _running_ Redis later in this guide.
 
 ## Recommended: RediSearch and RedisJSON
 
-Redis OM relies on the [RediSearch][redisearch-url] and [RedisJSON][redis-json-url] Redis modules to support [rich queries](querying.md) and [embedded models](embedded_models.md).
+Redis OM relies on the [RediSearch][redisearch-url] and
+[RedisJSON][redis-json-url] Redis modules to support rich queries and embedded
+models.
 
-You don't need these Redis modules to use Redis OM's data modeling, validation, and persistence features, but we recommend them to get the most out of Redis OM.
+You don't need these Redis modules to use Redis OM's data modeling, validation,
+and persistence features, but we recommend them to get the most out of Redis OM.
 
-The easiest way to run these Redis modules during local development is to use the [redismod](https://hub.docker.com/r/redislabs/redismod) Docker image.
+The easiest way to run these Redis modules during local development is to use
+the [redismod](https://hub.docker.com/r/redislabs/redismod) Docker image.
 
-For other installation methods, follow the "Quick Start" guides on both modules' home pages.
+For other installation methods, follow the "Quick Start" guides on both modules'
+home pages.
 
 ## Starting Redis
 
@@ -85,9 +111,11 @@ Otherwise, you can start the server manually:
 
 ### Docker
 
-The command to start Redis with Docker depends on the image you've chosen to use.
+The command to start Redis with Docker depends on the image you've chosen to
+use.
 
-**TIP:** The `-d` option in these examples runs Redis in the background, while `-p 6379:6379` makes Redis reachable at port 6379 on your localhost.
+**TIP:** The `-d` option in these examples runs Redis in the background, while 
+`-p 6379:6379` makes Redis reachable at port 6379 on your localhost.
 
 #### Docker with the `redismod` image (recommended)
 
@@ -99,7 +127,9 @@ The command to start Redis with Docker depends on the image you've chosen to use
 
 ## Installing Redis OM
 
-The recommended way to install Redis OM is with [Poetry](https://python-poetry.org/docs/). You can install Redis OM using Poetry with the following command:
+The recommended way to install Redis OM is with
+[Poetry](https://python-poetry.org/docs/). You can install Redis OM using Poetry
+with the following command:
 
     $ poetry install redis-om
 
@@ -111,45 +141,62 @@ Finally, you can install Redis OM with `pip` by running the following command:
 
     $ pip install redis-om
 
-**TIP:** If you aren't using Poetry or Pipenv and are instead installing directly with `pip`, we recommend that you install Redis OM in a virtual environment (AKA, a virtualenv). If you aren't familiar with this concept, see [Dan Bader's video and transcript](https://realpython.com/lessons/creating-virtual-environment/).
+**TIP:** If you aren't using Poetry or Pipenv and are instead installing
+directly with `pip`, we recommend that you install Redis OM in a virtual
+environment (AKA, a virtualenv). If you aren't familiar with this concept, see
+[Dan Bader's video and transcript](https://realpython.com/lessons/creating-virtual-environment/).
 
 
 ## Setting the Redis URL Environment Variable
 
-We're almost ready to create a Redis OM model! But first, we need to make sure that Redis OM knows how to connect to Redis.
+We're almost ready to create a Redis OM model! But first, we need to make sure
+that Redis OM knows how to connect to Redis.
 
-By default, Redis OM tries to connect to Redis on your localhost at port 6379. Most local install methods will result in Redis running at this location, in which case you don't need to do anything special.
+By default, Redis OM tries to connect to Redis on your localhost at port 6379.
+Most local install methods will result in Redis running at this location, in
+which case you don't need to do anything special.
 
-However, if you configured Redis to run on a different port, or if you're using a remote Redis server, you'll need to set the `REDIS_OM_URL` environment variable.
+However, if you configured Redis to run on a different port, or if you're using
+a remote Redis server, you'll need to set the `REDIS_OM_URL` environment
+variable.
 
 The `REDIS_OM_URL` environment variable follows the redis-py URL format:
 
     redis://[[username]:[password]]@localhost:6379/[database number]
 
-The default connection is equivalent to the following `REDIS_OM_URL` environment variable:
+The default connection is equivalent to the following `REDIS_OM_URL` environment
+variable:
 
     redis://@localhost:6379
 
-**TIP:** Redis databases are numbered, and the default is 0. You can leave off the database number to use the default database.
+**TIP:** Redis databases are numbered, and the default is 0. You can leave off
+the database number to use the default database.
 
-Other supported prefixes include "rediss" for SSL connections and "unix" for Unix domain sockets:
+Other supported prefixes include "rediss" for SSL connections and "unix" for
+Unix domain sockets:
 
     rediss://[[username]:[password]]@localhost:6379/0
     unix://[[username]:[password]]@/path/to/socket.sock?db=0
 
-For more details about how to connect to Redis with Redis OM, see the [connections documentation](connections.md).
+For more details about how to connect to Redis with Redis OM, see the
+[connections documentation](connections.md).
 
 ### Redis Cluster Support
 
-Redis OM supports connecting to Redis Cluster, but this preview release does not support doing so with the `REDIS_OM_URL` environment variable. However, you can connect by manually creating a connection object.
+Redis OM supports connecting to Redis Cluster, but this preview release does not
+support doing so with the `REDIS_OM_URL` environment variable. However, you can
+connect by manually creating a connection object.
 
-See the [connections documentation](connections.md) for examples of connecting to Redis Cluster.
+See the [connections documentation](connections.md) for examples of connecting
+to Redis Cluster.
 
 Support for connecting to Redis Cluster via `REDIS_OM_URL` will be added in a future release.
 
 ## Defining a Model
 
-In this tutorial, we'll create a `Customer` model that validates and saves data. Let's start with a basic definition of the model. We'll add features as we go along.
+In this tutorial, we'll create a `Customer` model that validates and saves data.
+Let's start with a basic definition of the model. We'll add features as we go
+along.
 
 ```python
 import datetime
@@ -168,16 +215,22 @@ class Customer(HashModel):
 
 There are a few details to note:
 
-1. Our `Customer` model extends the `HashModel` class. This means that it will be saved to Redis as a hash. The other model class that Redis OM provides is `JsonModel`, which we'll discuss later.
+1. Our `Customer` model extends the `HashModel` class. This means that it will
+be saved to Redis as a hash. The other model class that Redis OM provides is
+`JsonModel`, which we'll discuss later.
 2. We've specified the model's fields using Python type annotations.
 
 Let's dig into these two details a bit more.
 
 ### The HashModel Class
 
-When you subclass `HashModel`, your subclass is both a Redis OM model, with methods for saving data to Redis, *and* a Pydantic model.
+When you subclass `HashModel`, your subclass is both a Redis OM model, with
+methods for saving data to Redis, *and* a Pydantic model.
 
-This means that you can use Pydantic field validations with your Redis OM models, which we'll cover later, when we talk about validation. But this also means you can use Redis OM models anywhere you would use a Pydantic model, like in your FastAPI applications. 🤯
+This means that you can use Pydantic field validations with your Redis OM
+models, which we'll cover later, when we talk about validation. But this also
+means you can use Redis OM models anywhere you would use a Pydantic model, like
+in your FastAPI applications. 🤯
 
 ### Type Annotations
 
@@ -189,9 +242,13 @@ The type annotations you add to your model fields are used for a few purposes:
 
 We'll see examples of these throughout the course of this tutorial.
 
-An important detail about the `HashModel` class is that it does not support `list`, `set`, or mapping (like `dict`) types. This is because Redis hashes cannot contain lists, sets, or other hashes.
+An important detail about the `HashModel` class is that it does not support
+`list`, `set`, or mapping (like `dict`) types. This is because Redis hashes
+cannot contain lists, sets, or other hashes.
 
-If you want to model fields with a list, set, or mapping type, or another model, you'll need to use the `JsonModel` class, which can support these types, as well as embedded models.
+If you want to model fields with a list, set, or mapping type, or another model,
+you'll need to use the `JsonModel` class, which can support these types, as well
+as embedded models.
 
 ## Creating Models
 
@@ -261,7 +318,8 @@ except ValidationError as e:
     """
 ```
 
-If we want the `bio` field to be optional, we need to change the type annotation to use `Optional`.
+If we want the `bio` field to be optional, we need to change the type annotation
+to use `Optional`.
 
 ```python
 import datetime
@@ -301,7 +359,8 @@ class Customer(HashModel):
     bio: Optional[str] = "Super dope"  # <- We added a default here
 ```
 
-Now, if we create a `Customer` object without a `bio` field, it will use the default value.
+Now, if we create a `Customer` object without a `bio` field, it will use the
+default value.
 
 ```python
 import datetime
@@ -330,7 +389,8 @@ print(andrew.bio)  # <- So we got the default value.
 # > 'Super Dope'
 ```
 
-The model will then save this default value to Redis the next time you call `save()`.
+The model will then save this default value to Redis the next time you call
+`save()`.
 
 ### Automatic Primary Keys
 
@@ -365,15 +425,24 @@ print(andrew.pk)
 
 The ID is available *before* you save the model.
 
-The default ID generation function creates [ULIDs](https://github.com/ulid/spec), though you can change the function that generates the primary key for models if you'd like to use a different kind of primary key.
+The default ID generation function creates
+[ULIDs](https://github.com/ulid/spec), though you can change the function that
+generates the primary key for models if you'd like to use a different kind of
+primary key.
 
 ## Validating Data
 
-Redis OM uses [Pydantic][pydantic-url] to validate data based on the type annotations you assign to fields in a model class.
+Redis OM uses [Pydantic][pydantic-url] to validate data based on the type
+annotations you assign to fields in a model class.
 
-This validation ensures that fields like `first_name`, which the `Customer` model marked as a `str`, are always strings. **But every Redis OM model is also a Pydantic model**, so you can use Pydantic validators like `EmailStr`, `Pattern`, and many more for complex validations!
+This validation ensures that fields like `first_name`, which the `Customer`
+model marked as a `str`, are always strings. **But every Redis OM model is also
+a Pydantic model**, so you can use Pydantic validators like `EmailStr`,
+`Pattern`, and many more for complex validations!
 
-For example, we defined the `join_date` for our `Customer` model earlier as a `datetime.date`. So, if we try to create a model with a `join_date` that isn't a date, we'll get a validation error.
+For example, we defined the `join_date` for our `Customer` model earlier as a
+`datetime.date`. So, if we try to create a model with a `join_date` that isn't a
+date, we'll get a validation error.
 
 Let's try it now:
 
@@ -413,7 +482,9 @@ except ValidationError as e:
 
 ### Models Coerce Values By Default
 
-You might wonder what qualifies as a "date" in our last validation example. By default, Redis OM will try to coerce input values to the correct type. That means we can pass a date string for `join_date` instead of a `date` object:
+You might wonder what qualifies as a "date" in our last validation example. By
+default, Redis OM will try to coerce input values to the correct type. That
+means we can pass a date string for `join_date` instead of a `date` object:
 
 ```python
 import datetime
@@ -444,19 +515,27 @@ type(andrew.join_date)
 # > datetime.date  # The model parsed the string automatically!
 ```
 
-This ability to combine parsing (in this case, a YYYY-MM-DD date string) with validation can save you a lot of work.
+This ability to combine parsing (in this case, a YYYY-MM-DD date string) with
+validation can save you a lot of work.
 
-However, you can turn off coercion -- check the next section on using strict validation.
+However, you can turn off coercion -- check the next section on using strict
+validation.
 
 ### Strict Validation
 
-You can turn on strict validation to reject values for a field unless they match the exact type of the model's type annotations.
+You can turn on strict validation to reject values for a field unless they match
+the exact type of the model's type annotations.
 
-You do this by changing a field's type annotation to use one of the ["strict" types provided by Pydantic](https://pydantic-docs.helpmanual.io/usage/types/#strict-types).
+You do this by changing a field's type annotation to use one of the ["strict"
+types provided by
+Pydantic](https://pydantic-docs.helpmanual.io/usage/types/#strict-types).
 
-Redis OM supports all of Pydantic's strict types: `StrictStr`, `StrictBytes`, `StrictInt`, `StrictFloat`, and `StrictBool`.
+Redis OM supports all of Pydantic's strict types: `StrictStr`, `StrictBytes`,
+`StrictInt`, `StrictFloat`, and `StrictBool`.
 
-If we wanted to make sure that the `age` field only accepts integers and doesn't try to parse a string containing an integer, like "1", we'd use the `StrictInt` class.
+If we wanted to make sure that the `age` field only accepts integers and doesn't
+try to parse a string containing an integer, like "1", we'd use the `StrictInt`
+class.
 
 ```python
 import datetime
@@ -494,7 +573,9 @@ except ValidationError as e:
     """
 ```
 
-Pydantic doesn't include a `StrictDate` class, but we can create our own. In this example, we create a `StrictDate` type that we'll use to validate that `join_date` is a `datetime.date` object.
+Pydantic doesn't include a `StrictDate` class, but we can create our own. In
+this example, we create a `StrictDate` type that we'll use to validate that
+`join_date` is a `datetime.date` object.
 
 ```python
 import datetime
@@ -576,11 +657,15 @@ andrew.save()
 
 You can view the data stored in Redis for any Redis OM model.
 
-First, get the key of a model instance you want to inspect. The `key()` method will give you the exact Redis key used to store the model.
+First, get the key of a model instance you want to inspect. The `key()` method
+will give you the exact Redis key used to store the model.
 
-**NOTE:** The naming of this method may be confusing. This is not the primary key, but is instead the Redis key for this model. For this reason, the method name may change.
+**NOTE:** The naming of this method may be confusing. This is not the primary
+key, but is instead the Redis key for this model. For this reason, the method
+name may change.
 
-In this example, we're looking at the key created for the `Customer` model we've been building:
+In this example, we're looking at the key created for the `Customer` model we've
+been building:
 
 ```python
 import datetime
@@ -610,7 +695,9 @@ andrew.key()
 # > 'mymodel.Customer:01FKGX1DFEV9Z2XKF59WQ6DC9T'
 ```
 
-With the model's Redis key, you can start `redis-cli` and inspect the data stored under that key. Here, we run `JSON.GET` command with `redis-cli` using the running "redis" container that this project's Docker Compose file defines:
+With the model's Redis key, you can start `redis-cli` and inspect the data
+stored under that key. Here, we run `JSON.GET` command with `redis-cli` using
+the running "redis" container that this project's Docker Compose file defines:
 
 ```
 $ docker-compose exec -T redis redis-cli HGETALL mymodel.Customer:01FKGX1DFEV9Z2XKF59WQ6DC9r
@@ -633,7 +720,8 @@ $ docker-compose exec -T redis redis-cli HGETALL mymodel.Customer:01FKGX1DFEV9Z2
 
 ## Getting a Model
 
-If you have the primary key of a model, you can call the `get()` method on the model class to get the model's data.
+If you have the primary key of a model, you can call the `get()` method on the
+model class to get the model's data.
 
 ```python
 import datetime
@@ -665,9 +753,12 @@ assert Customer.get(andrew.pk) == andrew
 
 ## Querying for Models With Expressions
 
-Redis OM comes with a rich query language that allows you to query Redis with Python expressions.
+Redis OM comes with a rich query language that allows you to query Redis with
+Python expressions.
 
-To show how this works, we'll make a small change to the `Customer` model we defined earlier. We'll add `Field(index=True)` to tell Redis OM that we want to index the `last_name` and `age` fields:
+To show how this works, we'll make a small change to the `Customer` model we
+defined earlier. We'll add `Field(index=True)` to tell Redis OM that we want to
+index the `last_name` and `age` fields:
 
 ```python
 import datetime
@@ -712,11 +803,13 @@ Customer.find((Customer.last_name == "Brookins") | (
 ) & (Customer.last_name == "Smith")).all()
 ```
 
-Many more types of queries are possible. learn more about querying with Redis OM, see the [documentation on querying](docs/querying.md).
+Many more types of queries are possible. learn more about querying with Redis
+OM, see the [documentation on querying](docs/querying.md).
 
 ## Next Steps
 
-Now that you know the basics of working with Redis OM, continue on for all the nitty-gritty details about [models and fields](models_and_fields.md).
+Now that you know the basics of working with Redis OM, continue on for all the
+nitty-gritty details about [models and fields](models_and_fields.md).
 
 <!-- Links -->
 
