Add Andrew Brookins as an author

--- a/docs/develop/python/fastapi/index-fastapi.mdx
+++ b/docs/develop/python/fastapi/index-fastapi.mdx
@@ -3,6 +3,7 @@ id: index-fastapi
 title: Using Redis with FastAPI
 sidebar_label: Redis with FastAPI
 slug: /develop/python/fastapi
+authors: [andrew]
 ---
 
 import Tabs from '@theme/Tabs';
