--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -3,6 +3,7 @@ id: index-redis-om
 title: Getting Started With Redis OM for Python
 sidebar_label: Redis OM - Python
 slug: /develop/python/redis-om
+authors: [andrew]
 ---
 
 import Tabs from '@theme/Tabs';
