Fix Pydantic URL

--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -207,7 +207,7 @@ be saved to Redis as a hash. The other model class that Redis OM provides is
 `JsonModel`, which we'll discuss later.
 2. We've specified the model's fields using Python type annotations.
 
-Let's dig into these two details a bit more.
+Let's dig into the `HashModel` class and type annotations a bit more.
 
 ### The HashModel Class
 
@@ -804,3 +804,4 @@ If you're a FastAPI user, check out [how to integrate Redis OM with FastAPI](htt
 
 [redisearch-url]: https://oss.redis.com/redisearch/
 [redis-json-url]: https://oss.redis.com/redisjson/
+[pydantic-url]: https://github.com/samuelcolvin/pydantic
