--- a/docs/howtos/socialnetwork/index-socialnetwork.mdx
+++ b/docs/howtos/socialnetwork/index-socialnetwork.mdx
@@ -8,7 +8,7 @@ authors: [julian,manuel]
 
 ![image](images/socialnetwork.png)
 
-In this blog post we’ll build a social network application using RediSearch and NodeJS. This is the idea that we used for our app [Skillmarket](https://www.youtube.com/watch?v=18NPKZy28cQ)
+In this blog post we’ll build a social network application using RediSearch and NodeJS. This is the idea that we used for our app [Skillmarket].(https://www.youtube.com/watch?v=18NPKZy28cQ)
 
 The goal of the application is to match users with complementary skills. It will allow users to register and provide some information about themselves, like location, areas of expertise and interests. Using RediSearch it will match two users who are geographically close, and have complementary areas of expertise and interests, e.g., one of them knows French and want to learn Guitar and the other knows Guitar and want to learn French.
 
