--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-Redis OM for Python makes it easy to model and query data in Redis using
+[Redis OM for Python](https://github.com/redis/redis-om-python) makes it easy to model and query data in Redis using
 declarative models that will feel right at home to users of Peewee, SQLAlchemy,
 and the Django ORM.
 
