--- a/docs/develop/python/redis-om/index-redis-om.mdx
+++ b/docs/develop/python/redis-om/index-redis-om.mdx
@@ -122,7 +122,7 @@ use.
 
     $ docker run -d -p 6379:6379 redislabs/redismod
 
-### Docker with the `redis` image
+#### Docker with the `redis` image
 
     $ docker run -d -p 6379:6379 redis
 
