Adds Ajeet and Simon as authors.

--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -3,6 +3,7 @@ id: index-gettingstarted
 title: Getting Started with Node.js
 sidebar_label: Getting Started  
 slug: /develop/node/gettingstarted
+authors: [ajeet, simon]
 ---
 
 import Tabs from '@theme/Tabs';
