Fixed NodeJS -> Node.js, added Simon as co author as this is taken from ioredis crash course

--- a/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
+++ b/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
@@ -1,9 +1,9 @@
 ---
 id: index-storingjson-nodejs
-title: How to store and retrieve JSON documents using NodeJS 
-sidebar_label: Storing and retrieving JSON documents using NodeJS
+title: How to store and retrieve JSON documents using Node.js 
+sidebar_label: Storing and retrieving JSON documents using Node.js
 slug: /howtos/redisjson/storing-json-using-nodejs
-authors: [ajeet]
+authors: [ajeet, simon]
 ---
 
 
