--- a/docs/howtos/redisjson/json-using-redisearch/jsonindex-document/index-jsonindex-document.mdx
+++ b/docs/howtos/redisjson/json-using-redisearch/jsonindex-document/index-jsonindex-document.mdx
@@ -14,7 +14,7 @@ RediSearch has been providing indexing and search capabilities on hashes. Under 
 
 By exposing its capabilities to other modules, RedisJSON gives RediSearch the ability to index JSON documents so users can now find documents by indexing and querying the content. These combined modules give you a powerful, low latency, JSON-oriented document database!
 
-### Prerequisite:
+### Prerequisites:
 
 - Redis 6.x or later
 - RediSearch 2.2 or later
@@ -181,6 +181,7 @@ Please Note: It is not possible to index JSON object and JSON arrays.
 
 ### References
 
+- [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
 
 
 
