--- a/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
+++ b/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
@@ -210,7 +210,8 @@ We can now search in the address:
 
 ### References
 
-- [Indexing JSON Document](https://oss.redislabs.com/redisearch/master/Indexing_JSON)
-- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redislabs.com/blog/index-and-query-json-docs-with-redis/)
+- [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
+- [Indexing JSON Documents](https://oss.redis.com/redisearch/master/Indexing_JSON/)
+- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
 
 
