--- a/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
@@ -76,6 +76,7 @@ You can verify what's happening in the background by running the monitor command
 
 ### References
 
+- [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
 - [Rate Limiting app in Ruby and Redis](/howtos/ratelimiting/)
 - [Ruby and Redis](/develop/ruby/)
 
