--- a/docs/howtos/redisjson/using-java/index-usingjava.mdx
+++ b/docs/howtos/redisjson/using-java/index-usingjava.mdx
@@ -96,6 +96,7 @@ Use the "clean" command to delete all previously compiled Java .class files and 
 
 ### References
 
+- [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
 - [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
