--- a/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
@@ -92,9 +92,10 @@ Select "employee_profile" to display the JSON data
 
 ### References
 
+- [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
 - [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
 - Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
 - [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
-- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redislabs.com/blog/index-and-query-json-docs-with-redis/) 
+- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/) 
